added views, readme

--- a/HairSalon/Views/Stylists/Create.cshtml
+++ b/HairSalon/Views/Stylists/Create.cshtml
@@ -12,4 +12,4 @@
   <input type="submit" value="Add new stylist" />
 }
 
-<p>@Html.ActionLInk("Show all stylists", "Index")</p>
+<p>@Html.ActionLink("Show all stylists", "Index")</p>
