--- a/HairSalon/Views/Stylists/Details.cshtml
+++ b/HairSalon/Views/Stylists/Details.cshtml
@@ -19,9 +19,12 @@ else
   <ul>
     @foreach (Client client in Model.Clients)
     {
-      <li>@Html.DisplayNameFor(client => client.Name): @HtmlDisplayFor(client => client.Name)</li>
+      <li>@Html.ActionLink($"{client.Name}", "Details", "Clients", new { id = client.ClientId })</li>
     }
   </ul>
 }
+<p>@Html.ActionLink("Add new Client", "Create", "Clients")</p>
 
-<p>@Html.ActionLink("Back to list", "Index")</p>
+<p>@Html.ActionLink("Edit Stylist", "Edit", new { id = Model.StylistId })</p>
+<p>@Html.ActionLink("Delete Stylist", "Delete", new { id = Model.StylistId })</p>
+<p>@Html.ActionLink("Back to Stylists", "Index")</p>
